# brainfuck

./: README.md  compiler.py  interpreter.py  ir_compiler.py  ir_lexer.py  lexer.py  lexical_analyzer.py  parser.py  pyproject.toml  stack_machine.py
data/: factor.bf  factor.txt  fizzbuzz.bf  fizzbuzz.txt  for.bf  for.txt  gcd.bf  gcd.txt  ir_lextest.txt  lextest.txt  life.bf  life.txt  localvariable.bf  localvariable.txt  multi_dim_array.bf  multi_dim_array.txt  nqueens.bf  nqueens.txt  prime.bf  prime.txt  putstring.bf  putstring.txt  sudoku.bf  sudoku.txt  test.txt  transpose.bf  transpose.txt
data/frontend/: fibonacci.txt  test.bf  test.ir  test.txt
data/ir/: block.bf  block.txt  factor.bf  factor.txt  fibonacci.txt  fizzbuzz.bf  fizzbuzz.txt  gcd.bf  gcd.txt  getint.bf  getint.txt  sudoku.bf  sudoku.prob  sudoku.txt
data/life_inputs/: README.txt  clock.txt  clock2.txt  glider.txt  pulser.txt
data/sudoku_problems/: prob1.txt  prob2.txt  prob3.txt
src/bfcc/: __init__.py  cli.py  compiler.py  lexer.py  parser.py
stackmachine/: interpreter.py  stack_machine.py
stackmachine/test/: test.py
test/: __init__.py  test_cli.py  test_parser.py  test_stack_machine.py
