[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bfcc"
version = "0.1.0"
description = "Compiler targeting Brainfuck"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
bfcc = "bfcc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
